codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: tui_app_server/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Queued follow-up messages                     
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit last queued message              
                                                
› 让  Codex 处 理 任 何 事 情                          
                                                
  ? 查 看 快 捷 键                  剩 余 上 下 文  100%
