codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui_app_server/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• 处 理 中  (0s • esc 可 中 断 )    
                              
                              
› 让  Codex 处 理 任 何 事 情        
                              
             剩 余 上 下 文  100%
